--- a/styles/bundler.scss
+++ b/styles/bundler.scss
@@ -5,6 +5,7 @@
 @import './components/Keyboard.scss';
 @import './components/Health.scss';
 @import './components/Score.scss';
+@import './components/Level.scss';
 @import './components/VolumeController.scss';
 
 @import './components/FinishGame.scss';
