--- a/src/index.css
+++ b/src/index.css
@@ -142,6 +142,44 @@ body {
     opacity: 0.5;
     color: var(--c_light900); }
 
+.Level {
+  display: flex;
+  padding: 40px 0;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 550px;
+  right: -200px;
+  height: 400px;
+  width: 100px;
+  background: var(--c_dark800); }
+  .Level_text {
+    text-align: center;
+    color: var(--c_light900);
+    text-transform: uppercase; }
+    .Level_text h2 {
+      font-size: 24px;
+      opacity: 0.5;
+      font-weight: 900; }
+    .Level_text h1 {
+      font-size: 44px; }
+  .Level_trace {
+    position: relative;
+    height: 200px; }
+    .Level_trace_stars {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      display: flex;
+      gap: 20px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+      .Level_trace_stars svg {
+        stroke: var(--c_light900);
+        stroke-width: 2px;
+        z-index: 9; }
+
 .VolumeController {
   position: absolute;
   right: -350px;
