--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -20,6 +20,7 @@ body {
   align-items: center;
   font-family: 'Inter', sans-serif;
   background-color: var(--c_dark900);
+  transform: scale(0.7);
 }
 
 #root {
