--- a/styles/components/Health.scss
+++ b/styles/components/Health.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-
+  margin-left: 40px;
   position: relative;
   width: 288px;
   height: 100%;
