--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: 'Inter', sans-serif;
-  background-color: var(--c_dark900);
-  transform: scale(0.7); }
+  background-color: var(--c_dark900); }
 
 #root {
   position: relative;
@@ -26,7 +25,8 @@ body {
   max-width: 1920px;
   height: 1080px;
   border: 20px solid rgba(194, 223, 232, 0.1);
-  box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.2);
+  transform: scale(0.75); }
   #root .LowerPanel {
     width: 100%;
     height: 100%; }
