fix:fixed logic to increase letter speed and added a warning for orientation on a mobile device

--- a/styles/bundler.scss
+++ b/styles/bundler.scss
@@ -7,5 +7,6 @@
 @import './components/Score.scss';
 @import './components/Level.scss';
 @import './components/VolumeController.scss';
+@import './components/ErrorMobile.scss';
 
 @import './components/FinishGame.scss';
