--- a/styles/bundler.scss
+++ b/styles/bundler.scss
@@ -1,5 +1,6 @@
 @import './settings.scss';
 
+@import './components/Range.scss';
 @import './components/DialogFile.scss';
 @import './components/LowerPanel.scss';
 @import './components/Keyboard.scss';
