--- a/styles/components/DialogFile.scss
+++ b/styles/components/DialogFile.scss
@@ -11,36 +11,66 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    background: var(--c_dark800);
-    opacity: .8;
+    background: rgb(var(--c_dark800),0.1);
+    backdrop-filter: blur(100px);
   }
 
   &_container {
     position: absolute;
-
+    height: min-content;
     display: flex;
-    gap: 20px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    width: 600px;
-    height: 200px;
+    justify-content: space-between;
+    width: 900px;
     z-index: 99;
-    border-radius: 4px;
 
-    input {
+    border-radius: 4px;
+    .left, .right {
+      display: flex;
+      gap: 20px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
+    } 
+
+
+    #dialogFile {
       display: none;
-      background: red;
     }
 
+    #levelChanger {
+      h3 {
+        margin-bottom: 20px;
+        text-align: center;
+        letter-spacing: 3px;
+        font-size: x-large;
+        color: rgb(var(--c_light900), 0.4);
+      }
+      input {
+        padding: 10px 20px;
+        font-size: x-large;
+        background: none;
+        border: none;
+        font-weight: 700;
+        background:rgb(var(--c_light900));
+        outline: 1px solid rgb(var(--c_light900), 0.4);
+        -moz-appearance: textfield;
+        &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+        &::placeholder {
+          color:rgb(var(--c_dark900), 0.5);
+        }
+      }
+    }
     button, label {
       font-size: 24px;
       font-weight: 700;
       padding: 10px 20px;
       border: none;
       cursor: pointer;
-      background-color: var(--c_light900);
+      background-color: rgb(var(--c_light900));
       outline: none;
     }
   }
