--- a/styles/components/ErrorMobile.scss
+++ b/styles/components/ErrorMobile.scss
@@ -7,7 +7,7 @@
     font-size: clamp(20px, 6vw, 56px);
     text-transform: uppercase;
     font-weight: 900;
-    color: var(--c_light900);
+    color: rgb(var(--c_light900));
 
     p {
         width: 80%;
