--- a/styles/components/Level.scss
+++ b/styles/components/Level.scss
@@ -1,21 +1,15 @@
 .Level {
   display: flex;
-  padding: 40px 0;
+  padding: 40px 20px;
   flex-direction: column;
   justify-content: space-between;
-
-  position: absolute;
-  bottom: 550px;
-  right: -200px;
-
   height: 400px ;
-  width: 100px;
-
-  background: var(--c_dark800);
+  min-width: 100px;
+  background: rgb(var(--c_dark800));
 
   &_text {
     text-align: center;
-    color: var(--c_light900);
+    color: rgb(var(--c_light900));
     text-transform: uppercase;
  
     h2 {
@@ -44,7 +38,7 @@
       align-items: center;
 
       svg {
-        stroke: var(--c_light900);
+        stroke: rgb(var(--c_light900));
         stroke-width: 2px;
         z-index: 9;
       }
