--- a/styles/components/VolumeController.scss
+++ b/styles/components/VolumeController.scss
@@ -1,61 +1,45 @@
-%thumb {
-  -webkit-appearance: none;
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  background: var(--c_light900);
-  cursor: ew-resize;
-}
 .VolumeController {
-
-
-  position: absolute;
-  right: -350px;
-  bottom: 150px;
-
-  width: 400px;
-  height: 100px;
-  background: var(--c_dark800);
-  transform: rotate(-90deg);
+  width: 100%;
+  height: 400px;
+  background: rgb(var(--c_dark800));
 
   .container {
     position: relative;
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding: 20px 0 60px;
     justify-content: center;
   }
     
   svg {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: calc(50% - 25px);
-    left: 105%;
-    transform: rotate(-90deg);
+    min-width: 50px;
+    min-height: 50px;
     path {
-     
-      fill: var(--c_light900);
+      fill: rgb(var(--c_light900));
     }
   }
 
   input {
-    width: 80%;
-    height: 100%;
-    
+    order:2;
+    width: 100%;
+    height: 80%;
+    writing-mode: vertical-lr;
+    appearance: slider-vertical;
+    vertical-align: bottom;
     -webkit-appearance: none !important;
-    appearance: none;
     background: transparent;
     cursor: pointer;
-    outline: none;
-
 
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
       height: 30px;
       width: 30px;
       border-radius: 50%;
-      background: var(--c_light900);
+      background: rgb(var(--c_light900));
       cursor: pointer;
     }
     
@@ -64,7 +48,7 @@
       height: 30px;
       width: 30px;
       border-radius: 50%;
-      background: var(--c_light900);
+      background: rgb(var(--c_light900));
       cursor: pointer;
     }
     &::-ms-thumb  {
@@ -72,25 +56,22 @@
       height: 30px;
       width: 30px;
       border-radius: 50%;
-      background: var(--c_light900);
+      background: rgb(var(--c_light900));
       cursor: pointer;
     }
 
     &::-ms-track {
-      background: var(--c_dark900);
+      background: rgb(var(--c_dark900));
       height: 10px;
     }
 
     &::-webkit-slider-runnable-track {
-      background: var(--c_dark900);
-   
-   
+      background: rgb(var(--c_dark900));
     }
 
     &::-moz-range-track {
-      background: var(--c_dark900);
+      background: rgb(var(--c_dark900));
       height: 10px;
-
     }
     
   }
