--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -22,6 +22,7 @@ body {
   align-items: center;
   font-family: 'Inter', sans-serif;
   background-color: rgb(var(--c_dark900));
+  overflow: hidden;
 }
 
 #root, .Game {
