--- a/styles/components/VolumeController.scss
+++ b/styles/components/VolumeController.scss
@@ -13,6 +13,7 @@
     gap: 30px;
     padding: 20px 0 60px;
     justify-content: center;
+    
   }
     
   svg {
@@ -33,7 +34,7 @@
     -webkit-appearance: none !important;
     background: transparent;
     cursor: pointer;
-
+    transform: rotate(180deg);
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
       height: 30px;
